Adicionando links ausentes

--- a/css/profile.css
+++ b/css/profile.css
@@ -53,6 +53,7 @@ aside > .user-info > .rank {
 	border: none;
 	text-align: left;
 	color: #888;
+	cursor: pointer;
 	border-bottom: 1px solid #DDD;
 }
 
