responsive elements almost ready

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -104,6 +104,15 @@
 		width: 50%;
 	}
 
+	.bannerWrapper, .categories {
+		flex-direction: column;
+	}
+
+	.bannerWrapper > .banner {
+		width: 100%;
+		margin-bottom: 25px;
+	}
+
 	.newsletter {
 		height: auto;
 		padding: 15px 5%;
