--- a/css/profile.css
+++ b/css/profile.css
@@ -57,6 +57,19 @@ aside > .user-info > .rank {
 	border-bottom: 1px solid #DDD;
 }
 
+.profile-container > aside > button > span {
+	float: left;
+	margin-top: 5px;
+	margin-left: 15px;
+}
+
+.profile-container > aside > button > svg {
+	float: left;
+	width: 24px;
+	height: 24px;
+	fill: #888;
+}
+
 .profile-container > aside > button:hover {
 	color: #b30664;
 }
@@ -64,7 +77,7 @@ aside > .user-info > .rank {
 .profile-container > aside > .active,
 .profile-container > aside > .active:hover {
 	color: #222;
-	background: #EEE;
+	background: rgba(246, 246, 246, 1);
 }
 
 .profile-container > .section-container {
@@ -77,18 +90,92 @@ aside > .user-info > .rank {
 
 .section-container > div {
     float: left;
-    width: calc(100% - 40px);
+    width: calc(100% - 80px);
     height: auto;
-    padding: 20px;
+    padding: 20px 40px;
+		display: none;
 }
 
-.personal-info > .name {
+.section-container > .personal-info {
+	display: block;
+}
+
+.personal-info > label,
+.personal-info > .changer {
     float: left;
-    width: 100%;
+    width: 240px;
     height: auto;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+		clear: both;
 }
 
-.personal-info > p > span {
-    font-weight: 600;
+.personal-info > label {
+	width: 100%;
+	margin-bottom: 10px;
+}
+
+.personal-info > .changer {
+	padding: 10px;
+	border: 1px solid #888;
+	border-radius: 4px;
+}
+
+#save-info {
+	float: left;
+	clear: both;
+	width: auto;
+	height: auto;
+	margin-top: 30px;
+	padding: 15px;
+	color: #FFF;
+	background: #b30664;
+	border-radius: 4px;
+	border: none;
+	cursor: pointer;
+}
+
+.bannerWrapper {
+	margin-top: 40px;
+}
+
+@media screen and (max-width: 880px) {
+	.profile-container > aside {
+		width: 66px;
+	}
+
+	.profile-container > aside > button > span,
+	.profile-container > aside > .user-info {
+		display: none;
+	}
+
+	.profile-container > .section-container {
+		width: calc(100% - 68px);
+	}
+}
+
+@media screen and (max-width: 420px) {
+	.profile-container > aside {
+		width: 100%;
+		height: 60px;
+		border-bottom: 1px solid #DDD;
+	}
+
+	.profile-container > aside > button {
+		padding-left: 16px;
+		width: 60px;
+		height: 60px;
+		border: none;
+		text-align: center;
+		border-right: 1px solid #DDD;
+	}
+
+	.profile-container > .section-container {
+		width: 100%;
+		margin-top: 61px;
+	}
+
+	.section-container > div {
+		width: 90%;
+		padding: 20px 5%;
+	}
 }
