moved css from products to default

--- a/css/default.css
+++ b/css/default.css
@@ -914,6 +914,86 @@ footer {
 	color: #FFF;
 }
 
+.frame > .product-modal {
+	float: left;
+	width: calc(100% - 40px);
+	height: auto;
+	padding: 20px;
+	position: relative;
+}
+
+.frame > .product-modal > .stats {
+	float: left;
+	width: 200px;
+	height: auto;
+}
+
+.product-modal > .stats > .product-image {
+	float: left;
+	width: 200px;
+	height: 200px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: contain;
+}
+
+.product-modal > .stats > .product-name,
+.product-modal > .stats > .product-owner,
+.product-modal > .stats > .product-price {
+	float: left;
+	width: 100%;
+	margin: 10px 0px;
+	font-weight: 600;
+	font-size: 16px;
+}
+
+.product-modal > .stats > .product-owner {
+	margin-top: 0px;
+	font-size: 14px;
+	font-weight: 500;
+	color: #888;
+}
+
+.product-modal > .stats > .product-price {
+	font-size: 28px;
+	color: #b30664;
+	margin-bottom: 0px;
+}
+
+.frame > .product-modal > .description {
+	float: right;
+	width: calc(100% - 220px);
+	height: auto;
+}
+
+.product-modal > .description > .title {
+	float: left;
+	clear: both;
+	font-size: 16px;
+	font-weight: 600;
+	margin-top: 30px;
+	margin-bottom: 20px;
+}
+
+.product-modal > .description > .text {
+	float: left;
+	clear: both;
+	font-size: 14px;
+	color: #444;
+}
+
+.product-modal > .buy {
+	position: absolute;
+	right: 20px;
+	bottom: 20px;
+	width: calc(100% - 265px);
+	height: 44px;
+	border: none;
+	color: #FFF;
+	background: #b30664;
+	border-radius: 4px;
+}
+
 /* OVERRIDES */
 .block-scrolling {
 	overflow: hidden !important;
