--- a/css/responsive.css
+++ b/css/responsive.css
@@ -99,7 +99,7 @@
 	}
 }
 
-@media screen and (max-width: 880px) {
+@media screen and (max-width: 900px) {
 	h1 {
 		width: 50%;
 	}
@@ -159,6 +159,11 @@
 	.footer-grid > .part {
 		height: 280px;
 	}
+
+	.large {
+		width: 80vw !important;
+		margin-left: 10vw !important;
+	}
 }
 
 @media screen and (max-width: 780px) {
@@ -198,6 +203,36 @@
 	h1 {
 		width: 90%;
 		font-size: 36px;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.darkFrame > .frame {
+		overflow-x: hidden;
+		overflow-y: auto;
+	}
+
+	.frame > .product-modal > .stats {
+		width: 100%;
+	}
+
+	.frame > .product-modal > .description {
+		float: left;
+		width: 100%;
+	}
+
+	.product-modal > .description > .text {
+		margin-bottom: 30px;
+	}
+
+	.product-modal > .quantity-wrapper, .product-modal > .buy {
+		position: static;
+		float: left;
+		width: 100%;
+	}
+
+	.product-modal > .buy {
+		margin-top: 20px;
 	}
 }
 
@@ -307,11 +342,12 @@
 		line-height: 2em;
 	}
 
-	.darkFrame > .frame, .darkFrame > .NeedMoreSpace {
-		width: 100%;
-		height: 100%;
-		margin-top: 0px;
-		margin-left: 0px;
+	.darkFrame > .frame, .darkFrame > .large, .darkFrame > .NeedMoreSpace {
+		width: 100% !important;
+		height: 100% !important;
+		margin-top: 0px !important;
+		margin-left: 0px !important;
+		border-radius: 0px;
 	}
 
 	.frame > .close-modal {
