Aparentemente, tudo pronto

--- a/css/checkout.css
+++ b/css/checkout.css
@@ -16,7 +16,7 @@
 
 .module > .right {
   float: right;
-  width: 65%;
+  width: 61%;
   height: auto;
   margin-top: 20px;
 }
@@ -125,14 +125,18 @@
   margin-top: 30px;
 }
 
-.totalPrice > p {
+.totalPrice > p,
+.total p,
+.frete p {
   float: left;
   font-weight: 600;
   font-size: 20px;
   color: #888;
 }
 
-.totalPrice > p:nth-child(2) {
+.totalPrice > p:nth-child(2),
+.total > p:nth-child(2),
+.frete > p:nth-child(2) {
   float: right;
   color: #b30664;
 }
@@ -233,4 +237,73 @@
 
 .boleto-list {
   display: none;
+}
+
+.right > h3 {
+  margin-bottom: 30px;
+}
+
+.right > label,
+.right > .changer,
+.right div label,
+.right div .changer {
+    float: left;
+    width: calc(100% - 20px);
+    height: auto;
+    margin-bottom: 15px;
+		clear: both;
+}
+
+.right div label {
+	width: 100%;
+	font-size: 13px;
+	color: #888;
+	margin-bottom: 10px;
+}
+
+.right > .changer,
+.right div .changer {
+	padding: 10px;
+	border: 1px solid #888;
+	border-radius: 4px;
+}
+
+#save-new-address {
+	float: left;
+	clear: both;
+	width: 262px;
+	height: auto;
+	margin-top: 30px;
+	padding: 15px 0px;
+	color: #FFF;
+	background: #b30664;
+	border-radius: 4px;
+	border: none;
+	cursor: pointer;
+}
+
+.col-right,
+.col-left {
+	float: right;
+	width: 49%;
+	height: auto;
+}
+
+.col-left {
+	float: left;
+}
+
+.module:nth-child(3) > .left,
+.module:nth-child(3) > .right {
+  width: 47%;
+}
+
+.total, .frete {
+  float: left;
+  width: 100%;
+  margin-top: 15px;
+}
+
+.total p, .frete p {
+  font-size: 14px;
 }
