--- a/css/checkout.css
+++ b/css/checkout.css
@@ -334,3 +334,32 @@
   font-size: 14px;
   font-weight: 500;
 }
+
+@media screen and (max-width: 950px) {
+  .productsTable,
+  .module > .left,
+  .module > .right,
+  .module:nth-child(3) > .left,
+  .module:nth-child(3) > .right,
+  .col-right,
+  .col-left {
+    width: 100%;
+    clear: both;
+  }
+
+  .keepShopping {
+    width: 50%;
+    margin: 20px 25%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .cell {
+    flex-basis: 20%;
+    font-size: 12px;
+  }
+
+  .cell:nth-child(1) {
+    flex-basis: 60%;
+  }
+}
