--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -43,6 +43,7 @@ nav > button {
   width: 80px;
   height: 60px;
   border: none;
+  background-size: 32px;
   background-position: center;
   background-color: transparent;
   background-repeat: no-repeat;
@@ -50,28 +51,23 @@ nav > button {
 }
 
 .dashboard {
-  background-size: 32px;
   background-image: url(../img/dashboard.svg);
 }
 
 .lists {
-  background-size: 39px;
-  background-image: url(../img/promo.png);
+  background-image: url(../img/lists.svg);
 }
 
 .tags {
-  background-size: 39px;
-  background-image: url(../img/tags.png);
+  background-image: url(../img/tags.svg);
 }
 
 .promo {
-  background-size: 39px;
-  background-image: url(../img/promo.png);
+  background-image: url(../img/promo.svg);
 }
 
 .user {
-  background-size: 23px;
-  background-image: url(../img/user.png);
+  background-image: url(../img/user.svg);
 }
 
 section {
