--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -6,6 +6,7 @@
 
 body {
   position: relative;
+  overflow: hidden;
   background-color: rgba(93, 111, 140, 10%);
 }
 
@@ -40,14 +41,20 @@ nav {
 
 nav > button {
   float: left;
-  width: 80px;
-  height: 60px;
+  width: 55px;
+  height: 55px;
+  margin-left: 12px;
+  margin-bottom: 3px;
   border: none;
+  border-radius: 100%;
   background-size: 32px;
   background-position: center;
   background-color: transparent;
   background-repeat: no-repeat;
-  margin-bottom: 3px;
+}
+
+nav > .active {
+  background-color: #b10161;
 }
 
 .dashboard {
@@ -68,6 +75,13 @@ nav > button {
 
 .user {
   background-image: url(../img/user.svg);
+}
+
+header {
+  float: left;
+  width: 100%;
+  height: 60px;
+  margin-bottom: 10px;
 }
 
 section {
