--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -160,3 +160,10 @@ section {
   height: auto;
   padding: 0px 2.5%;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  color: #888;
+  font-size: 14px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
