--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -179,3 +179,17 @@ h1, h2, h3, h4, h5, h6 {
   width: 25%;
   height: auto;
 }
+.best-selling-module > .wrapper {
+  padding-top: 15px;
+}
+
+.best-selling-module > .wrapper > .entry {
+  float: left;
+  width: 100%;
+  height: 95px;
+  margin: 10px 0px;
+  margin-top: 0px;
+  background: #FFF;
+  border-radius: 7px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
